Updated PostImage component to use Next/Image

--- a/posts/2013-09-03-uncluttered.mdx
+++ b/posts/2013-09-03-uncluttered.mdx
@@ -6,7 +6,7 @@ description: 'Keeping the desk clean helps me stay organized'
 
 One of the biggest things I try to do is keep my desk uncluttered. I find that it helps me stay organized. As an example, here's my desk at work.
 
-<PostImage src="/images/posts/2013-09-03-uncluttered/work-desk.jpg" alt="Clean Desk" centered shadowed />
+<PostImage src="/images/posts/2013-09-03-uncluttered/work-desk.jpg" alt="Clean Desk" width={1024} height={576} centered shadowed />
 
 You can see that there's not much on my desk. I have a few decorative items around my desk, but not much with regards to loose papers and other clutter. What is normally out for me is my iPad and my Moleskin notebook.
 
