--- a/posts/2013-11-18-i-did-it-half-marathon-complete.mdx
+++ b/posts/2013-11-18-i-did-it-half-marathon-complete.mdx
@@ -9,6 +9,8 @@ I did it. After all the hard work and exercise, I ran a half marathon yesterday!
 <PostImage
     src="/images/posts/2013-11-18-i-did-it-half-marathon-complete/header-half-marathon-complete.jpg"
     alt="Me running in the 2013 Philadelphia Half Marathon"
+    width={1920}
+    height={620}
     centered
     shadowed
 />
