--- a/posts/2013-12-27-hope-everyone-had-a-good-christmas.mdx
+++ b/posts/2013-12-27-hope-everyone-had-a-good-christmas.mdx
@@ -13,6 +13,8 @@ Christmas morning, I made us a delicious breakfast which was followed by Lauren 
 <PostImage
     src="/images/posts/2013-12-27-hope-everyone-had-a-good-christmas/half-marathon-poster.jpg"
     alt="My half marathon bib and medal framed"
+    width={1394}
+    height={1920}
     centered
     shadowed={false}
 />
