--- a/posts/2014-04-01-run-forest-run.mdx
+++ b/posts/2014-04-01-run-forest-run.mdx
@@ -12,4 +12,11 @@ The marathon will actually be the end of a big running year for me. I'm going to
 
 Now to start training.
 
-<PostImage src="/images/posts/2014-04-01-run-forest-run/run-forest-run.jpg" alt="Me running the Phillies 5k" centered shadowed />
+<PostImage
+    src="/images/posts/2014-04-01-run-forest-run/run-forest-run.jpg"
+    alt="Me running the Phillies 5k"
+    width={640}
+    height={640}
+    centered
+    shadowed
+/>
