--- a/posts/2014-05-27-tracking-my-runs.mdx
+++ b/posts/2014-05-27-tracking-my-runs.mdx
@@ -14,6 +14,13 @@ After Broad Street and with several big races coming up, I decided I wanted to f
 
 Garmin Connect actually does a pretty good job at displaying the information to you as well. It gives you a map showing your run as well as graphs showing the elevation, pace, and if you wore your heart rate monitor, your heart rate as well. You can click below for an example of what a run looks like through the Garmin interface.
 
-<PostImage src="/images/posts/2014-05-27-tracking-my-runs/garmin-connect.jpg" alt="Garmin Connect Run View" centered shadowed />
+<PostImage
+    src="/images/posts/2014-05-27-tracking-my-runs/garmin-connect.jpg"
+    alt="Garmin Connect Run View"
+    width={1294}
+    height={1920}
+    centered
+    shadowed
+/>
 
 You can see that it gives you a pretty good idea of how I did based on elevation, how I was able to maintain or lose my pace as well as where my heart rate was. I'm looking forward to using this as I ramp up my runs over the next 2 weeks as I prepare for the ODDyssey Half-Marathon June 8th.
