--- a/posts/2015-12-17-i-finally-ran-a-marathon.mdx
+++ b/posts/2015-12-17-i-finally-ran-a-marathon.mdx
@@ -21,6 +21,8 @@ I wanted to say I ran a marathon in my lifetime, and now I can say I did so.
 <PostImage
     src="/images/posts/2015-12-17-i-finally-ran-a-marathon/marathon-complete.jpg"
     alt="Me finishing the 2015 Philadelphia Marathon"
+    width={1920}
+    height={970}
     centered
     shadowed
 />
