--- a/posts/2018-01-29-outdoor-hockey.mdx
+++ b/posts/2018-01-29-outdoor-hockey.mdx
@@ -8,10 +8,17 @@ So last Friday night, I was able to do something that I've been dreaming of for 
 
 The weekend prior, the AHL (American Hockey League, or the NHL minor league) held their version of the Winter Classic, the AHL Outdoor Classic. It was played outdoors at Hershey Park Stadium and was a matchup of the Hershey Bears hosting the Lehigh Valley Phantoms. Since the Phantoms are the Flyers' minor league affiliate, Lauren and I bought tickets to see the game. It was a pretty cool experience watching hockey outdoors. I just wish that I got tickets a little higher up so we could see a little bit more of the action. Happily, the Phantoms won 5-2.
 
-<PostImage src="/images/posts/2018-01-29-outdoor-hockey/2018-ahl-outdoor-classic.jpg" alt="Skating Outdoors" centered shadowed />
+<PostImage
+    src="/images/posts/2018-01-29-outdoor-hockey/2018-ahl-outdoor-classic.jpg"
+    alt="Skating Outdoors"
+    height={2048}
+    height={2048}
+    entered
+    shadowed
+/>
 
 Because they already built the outdoor rink, they decided to make some money by opening it up to the public to rent out. Reddit's Flyers subreddit set up a 2 hour pickup game on the ice last Friday and I was able to participate.
 
 Stepping out onto the field was a surreal experience. I've been playing hockey for almost 5 years now, but there really is something about skating around in the open air. The pickup game was a lot of fun. The ice wasn't as good as I was expecting or hoping as it had been up for a week with some 50-60ºF weather. Either way though, it was an amazing experience that I still can't fully believe I participated in. I'd recommend it to anyone, even just skating around outside would be worth it.
 
-<PostImage src="/images/posts/2018-01-29-outdoor-hockey/outdoor-skating.jpg" alt="Skating Outdoors" centered shadowed />
+<PostImage src="/images/posts/2018-01-29-outdoor-hockey/outdoor-skating.jpg" alt="Skating Outdoors" height={1536} width={1536} centered shadowed />
