--- a/posts/2020-01-05-yearly-wrapup-and-retrospective-2019.mdx
+++ b/posts/2020-01-05-yearly-wrapup-and-retrospective-2019.mdx
@@ -31,6 +31,8 @@ I managed to get to
 <PostImage
     src="/images/posts/2020-01-05-yearly-wrapup-and-retrospective-2019/2019-strength-training-charts.png"
     alt="Charts showing progress in squat, bench press, deadlift & overhead press"
+    width={1245}
+    height={765}
     centered
     shadowed
 />
@@ -54,6 +56,8 @@ This wasn’t really a goal for me at the beginning of the year, but in Septembe
 <PostImage
     src="/images/posts/2020-01-05-yearly-wrapup-and-retrospective-2019/me-as-goalie.jpg"
     alt="Me tending the net as a hockey goalie"
+    width={1500}
+    height={1200}
     centered
     shadowed
 />
