--- a/posts/2020-01-21-tracking-my-fitness-journey.mdx
+++ b/posts/2020-01-21-tracking-my-fitness-journey.mdx
@@ -34,7 +34,14 @@ I also grade myself daily for what I eat. I grade myself based on where I’m at
 
 I give myself a total of 10 points a day, weighted more on protein and calories. It might seem a little crazy, and it probably is, but I’ve found that it helps keep me at least a little more honest with improving my diet. For quick looks, I code each day green, yellow, or red depending on points. 8 through 10 and it’s a “green” day, 5 through 7 is yellow, and below 5 is red.
 
-<PostImage src="/images/posts/2020-01-21-tracking-my-fitness-journey/diet-log.png" alt="My Excel Spreadsheet Tracking My Diet" centered shadowed />
+<PostImage
+    src="/images/posts/2020-01-21-tracking-my-fitness-journey/diet-log.png"
+    alt="My Excel Spreadsheet Tracking My Diet"
+    width={1073}
+    height={764}
+    centered
+    shadowed
+/>
 
 It might be overkill, but I’m hoping it will help keep me on track. I’ve generally been pretty good at keeping active, but the saying is certainly true:
 
@@ -49,6 +56,8 @@ If you’ve read my blog before, you know that I’ve been doing a lot of focus 
 <PostImage
     src="/images/posts/2020-01-21-tracking-my-fitness-journey/lifting-notebook.jpg"
     alt="My Moleskine Notebook for Tracking My Lifts"
+    width={1920}
+    height={1440}
     centered
     shadowed
 />
@@ -58,6 +67,8 @@ When I get home, I transfer the data into a spreadsheet to calculate the volume 
 <PostImage
     src="/images/posts/2020-01-21-tracking-my-fitness-journey/lifting-log.png"
     alt="My Excel Spreadsheet Tracking My Lifts"
+    width={1417}
+    height={781}
     centered
     shadowed
 />
@@ -73,6 +84,8 @@ The last couple years, I’ve been trying to make it a goal for myself to genera
 <PostImage
     src="/images/posts/2020-01-21-tracking-my-fitness-journey/activity-log.png"
     alt="My Excel Spreadsheet Tracking My Activity"
+    width={1805}
+    height={431}
     centered
     shadowed
 />
