--- a/posts/2020-03-31-quarantine-update.mdx
+++ b/posts/2020-03-31-quarantine-update.mdx
@@ -16,7 +16,14 @@ Since my gym closed, I’ve been limited as to what I can do for fitness. I coul
 
 ### Puzzles
 
-<PostImage src="/images/posts/2020-03-31-quarantine-update/nyc-puzzle.jpg" alt="Puzzle my wife and I completed of New York City" shadowed centerd />
+<PostImage
+    src="/images/posts/2020-03-31-quarantine-update/nyc-puzzle.jpg"
+    alt="Puzzle my wife and I completed of New York City"
+    width={962}
+    height={337}
+    shadowed
+    centerd
+/>
 
 My wife and I have spent some evenings working on puzzles. This is the first one we did, a 750 piece panoramic shot of New York City (The sky was annoying!). We have since started a 2,000 piece puzzle of a scene from the Dolomites in Northern Italy.
 
