--- a/posts/2020-05-15-my-cat-cookie-is-now-11-years-old.mdx
+++ b/posts/2020-05-15-my-cat-cookie-is-now-11-years-old.mdx
@@ -6,7 +6,14 @@ description: 'My Cat Cookie is Now 11 Years Old'
 
 Meet Cookie, the cat that I’ve had now for almost 11 years.
 
-<PostImage src="/images/posts/2020-05-15-my-cat-cookie-is-now-11-years-old/cookie-cat.jpg" alt="My Tabby Cat Cookie" centered shadowed={false} />
+<PostImage
+    src="/images/posts/2020-05-15-my-cat-cookie-is-now-11-years-old/cookie-cat.jpg"
+    alt="My Tabby Cat Cookie"
+    width={1920}
+    height={1581}
+    centered
+    shadowed={false}
+/>
 
 In July 2009, I got my 2nd cat. My late cat, Nibbler at the time was a little over a year old and my girlfriend at the time decided she needed a friend. Cookie was about 7-8 weeks old when we got her so we randomly assigned May 15th as her birthday. She’s been ~~annoying~~ adorable ever since.
 
