--- a/posts/2020-06-24-section-230-should-be-protected.mdx
+++ b/posts/2020-06-24-section-230-should-be-protected.mdx
@@ -29,6 +29,8 @@ At the end of the day, Twitter, Facebook, and every other site have the ability 
 <PostImage
     src="/images/posts/2020-06-24-section-230-should-be-protected/xkcd_free_speech.png"
     alt="xkcd: Free Speech Comic"
+    width={566}
+    height={577}
     credit={
         <>
             Credit{' '}
