--- a/posts/2020-07-05-so-i-finally-finished-a-side-project.mdx
+++ b/posts/2020-07-05-so-i-finally-finished-a-side-project.mdx
@@ -15,6 +15,8 @@ Ever have a back-and-forth with friends or your better half about where you want
 <PostImage
     src="/images/posts/2020-07-05-so-i-finally-finished-a-side-project/wheredoyouwanttoeat2.jpg"
     alt="Screen shot of the new Where Do You Want to Eat"
+    width={1199}
+    height={670}
     shadowed
     centered
 />
@@ -26,6 +28,8 @@ I had built this a while back to be a little Javascript app tying into Google’
 <PostImage
     src="/images/posts/2020-07-05-so-i-finally-finished-a-side-project/where-do-you-want-to-eat.jpg"
     alt="Screen shot of the original Where Do You Want to Eat"
+    width={1600}
+    height={1000}
     shadowed
     centered
 />
