--- a/posts/2020-08-04-so-i-finally-built-a-home-gym.mdx
+++ b/posts/2020-08-04-so-i-finally-built-a-home-gym.mdx
@@ -16,7 +16,14 @@ I'm quite happy with what my setup. The only think I'll need is a better mat for
 
 ## My Setup
 
-<PostImage src="/images/posts/2020-08-04-so-i-finally-built-a-home-gym/homegym.jpg" alt="My Home Gym Setup" shadowed centered />
+<PostImage
+    src="/images/posts/2020-08-04-so-i-finally-built-a-home-gym/homegym.jpg"
+    alt="My Home Gym Setup"
+    width={1140}
+    height={1920}
+    shadowed
+    centered
+/>
 
 **Rack**: [Rogue SML-1](https://www.roguefitness.com/sml-1-rogue-70-monster-lite-squat-stand)
 
