--- a/posts/2020-09-24-handy-visual-studio-code-plugin-for-jest.mdx
+++ b/posts/2020-09-24-handy-visual-studio-code-plugin-for-jest.mdx
@@ -9,10 +9,12 @@ I ended up starting a new project recently which I'll get into later, but after 
 It's a Visual Studio Code plugin called [Jest Runner](https://marketplace.visualstudio.com/items?itemName=firsttris.vscode-jest-runner). What this does is allow you to run a single test or run all tests in the open file from the context menu.
 
 <PostImage
-	src="/images/posts/2020-09-24-handy-visual-studio-code-plugin-for-jest/jestrunner.png"
-	alt="Jest Runner in Action in VS Code"
-	shadowed
-	centered
+    src="/images/posts/2020-09-24-handy-visual-studio-code-plugin-for-jest/jestrunner.png"
+    alt="Jest Runner in Action in VS Code"
+    width={1998}
+    height={1123}
+    shadowed
+    centered
 />
 
 Prior to this, I had 2 npm test scripts. One that runs all tests and stops, and a second that puts Jest in watch mode running every time I make changes to files included in tests. This was sometimes annoying when I just wanted one file or one test run as I would have to wait for all the other tests to run as well. Now I can just right click on the test and click 'Run Jest' and boom...the console will open and the test will run.
