--- a/posts/2020-11-01-why-i-chose-the-apple-watch.mdx
+++ b/posts/2020-11-01-why-i-chose-the-apple-watch.mdx
@@ -8,12 +8,7 @@ I know the Apple Watch has been around for over 5 years, and I've had one for al
 
 Ever since high school, I've always been partial to wearing a watch. Even with the advent of the cell phone and smartphone, I've continued to wear a watch. In 2017, I purchased an Apple Watch Series 2 and have been happy with the purchase and the switch.
 
-<PostImage
-    src="/images/posts/2020-11-01-apple-watch/applewatch.jpg"
-    alt="My Apple Watch"
-    shadowed
-    centered
-/>
+<PostImage src="/images/posts/2020-11-01-apple-watch/applewatch.jpg" alt="My Apple Watch" width={1199} height={898} shadowed centered />
 
 ## The History
 
@@ -61,6 +56,6 @@ The reason I upgraded to the Series 5 was cost-related. $250 to repair a cracked
 
 One of the things I've tried to keep tabs on is my screen time. All too often it's easy to become distracted by my iPhone. The Apple Watch can amplify that if you let it. I attacked this problem by severely limiting what notifications I receive on my watch. Right now I think the only notifications I let go through to my watch are phone calls, iMessage messages, todo reminders & calendar notifications. Limiting what the watch buzzes about helps tremendously.
 
-<hr/>
+<hr />
 
 Smart watches aren't for everyone and they definitely aren't always the most stylish of watches. For me though, I am glad to have it as it does exactly what I want it to.
