--- a/posts/2020-12-16-reflections-on-my-running-streak-coming-to-an-end.mdx
+++ b/posts/2020-12-16-reflections-on-my-running-streak-coming-to-an-end.mdx
@@ -7,8 +7,10 @@ description: 'This past Monday, December 14, my running streak came to an end. I
 This past Monday, December 14, my running streak came to an end. I managed to get it up to 175 days, almost half the year. In the end, I just felt it was time to let it go.
 
 <PostImage
-    src="/images/posts/2020-12-16-reflections-on-my-running-streak-coming-to-an-end/header-marathon-complete.jpg"
+    src="/images/posts/2020-12-16-reflections-on-my-running-streak-coming-to-an-end/marathon-complete.jpg"
     alt="Me Finishing the 2015 Philadelphia Marathon"
+    width={1920}
+    height={979}
     shadowed
     centered
     credit={<>Me successfully finishing the 2015 Philadelphia Marathon</>}
@@ -28,9 +30,21 @@ As for now, I'm still working out. I'm still lifting weights in my basement gym,
 
 Here are the stats for my running streak:
 
-**Days**: 175\
-**Distance**: 536.91 miles\
-**Average Distance Ran**: 3.07 miles\
-**Time Running**: 84 hours, 14 minutes, 33 seconds\
-**Average Pace**: 9:25/mi.\
-**Running Shoes Gone Through**: 1.25
+<div style={{ marginBottom: 5 }}>
+    <strong>Days</strong>: 175
+</div>
+<div style={{ marginBottom: 5 }}>
+    <strong>Distance</strong>: 536.91 miles
+</div>
+<div style={{ marginBottom: 5 }}>
+    <strong>Average Distance Ran</strong>: 3.07 miles
+</div>
+<div style={{ marginBottom: 5 }}>
+    <strong>Time Running</strong>: 84 hours, 14 minutes, 33 seconds
+</div>
+<div style={{ marginBottom: 5 }}>
+    <strong>Average Pace</strong>: 9:25/mi.
+</div>
+<div style={{ marginBottom: 5 }}>
+    <strong>Running Shoes Gone Through</strong>: 1.25
+</div>
