--- a/posts/2021-04-06-three-months-down-in-2021.mdx
+++ b/posts/2021-04-06-three-months-down-in-2021.mdx
@@ -31,6 +31,8 @@ I also ended up re-doing my office this past week. I switched from an ultrawide 
 <PostImage
     src="/images/posts/2021-04-06-three-months-down-in-2021/desksetup.jpg"
     alt="My new desk setup with dual 27'' 4k monitors"
+    width={1920}
+    height={1167}
     centered
     shadowed
 />
