--- a/posts/2021-04-27-switching-platforms.mdx
+++ b/posts/2021-04-27-switching-platforms.mdx
@@ -20,7 +20,7 @@ Another thing I was looking into improving was my build/deployment process. I ho
 
 ## Making the Switch
 
-<PostImage src="/images/posts/2021-04-27-switching-platforms/nextjs.svg" alt="Next.js Logo" centered shadowed={false} />
+<PostImage src="/images/posts/2021-04-27-switching-platforms/nextjs.svg" alt="Next.js Logo" width={207} height={124} centered shadowed={false} />
 
 I've given it a fair amount of thought and right now I believe I will be starting the design and implementation of my blog using Next.js. I used Next.js with [Wes Bos' Advanced React & GraphQL Course](https://advancedreact.com/) & [Digital Family Cookbook](https://github.com/kpwags/digitalfamilycookbook) so I have some familiarity with it over Gatsby. But while I have some familiarity with it, it wasn't heavily used in either project so I figure this will also be a learning project.
 
