--- a/posts/2021-06-02-refactoring-loops.mdx
+++ b/posts/2021-06-02-refactoring-loops.mdx
@@ -8,12 +8,7 @@ Ever feel like you can never completely get started with a project? That's somet
 
 But despite all this, I feel like I'm farther along than I was a month or two ago even without any new functionality added. How is that possible you ask? Well it really comes down to refactoring my code.
 
-<PostImage
-    src="/images/posts/2021-06-02-refactoring-loops/code.jpg"
-    alt="Computer Code"
-    centered
-    shadowed={false}
-/>
+<PostImage src="/images/posts/2021-06-02-refactoring-loops/code.jpg" alt="Computer Code" width={2560} height={1704} centered shadowed={false} />
 
 ## First, a Little Background
 
