--- a/posts/2021-07-24-halfway-through-2021.mdx
+++ b/posts/2021-07-24-halfway-through-2021.mdx
@@ -21,6 +21,8 @@ The biggest project on my house was re-doing the kitchen cabinets. Our kitchen c
 <PostImage
     src="/images/posts/2021-07-24-halfway-through-2021/kitchen.jpg"
     alt="The end result of the kitchen cabinets refinishing"
+    width={1920}
+    height={1440}
     centered
     shadowed={false}
 />
@@ -30,6 +32,8 @@ I also ended up putting in a raised flower bed around one of our street lights. 
 <PostImage
     src="/images/posts/2021-07-24-halfway-through-2021/streetlight.jpg"
     alt="Adding a raised flower bed around a street light"
+    width={1080}
+    height={1440}
     centered
     shadowed={false}
 />
