--- a/posts/2016-09-15-thoughts-on-the-iphone-7.mdx
+++ b/posts/2016-09-15-thoughts-on-the-iphone-7.mdx
@@ -10,7 +10,14 @@ Apple last week announced the <a href="https://www.apple.com/iphone-7/" target="
 
 Apple’s Phil Schiller claimed that the reason Apple did it was <a href="http://www.theverge.com/2016/9/7/12838024/apple-iphone-7-plus-headphone-jack-removal-courage" target="_blank" rel="noopener noreferrer">courage</a>. I heard that, and had I been drinking something, it might have come back up through my nose. Apple says that it takes courage to try something new. I personally find that to be a load of BS. Look, I get it, its old technology, but it’s still the de facto standard. Removing it is going to make it difficult for a lot of people to listen to their music on their phones. Apple is providing headphones that plug into the lightning port which isn’t bad until you realize that you can’t charge your phone and listen at the same time (this is also ignoring that I feel the standard headphones are uncomfortable in the ear anyway, but that’s a different story). They also are nice enough to include a lightning to 3.5mm adapter, which is also sweet...until...wait for it...you can’t charge and listen to your headphones at the same time. <a href="http://arstechnica.com/gaming/2016/09/the-iphone-7s-first-headphone-and-charge-dongle-isnt-coming-from-apple/" target="_blank" rel="noopener noreferrer">Belkin released a dongle that allows you to plug in 2 lightning cables into your phone</a>, ostensibly one for your headphones and one for the power cable. This is all well and good, until you realize you will then need 2 dongles to listen to 3.5mm headphones and charge your phone at the same time.
 
-<PostImage src="/images/posts/2016-09-15-thoughts-on-the-iphone-7/belkin-adapter.jpg" alt="Belkin iPhone adapter" centered shadowed={false} />
+<PostImage
+    src="/images/posts/2016-09-15-thoughts-on-the-iphone-7/belkin-adapter.jpg"
+    alt="Belkin iPhone adapter"
+    centered
+    shadowed={false}
+    width={640}
+    height={385}
+/>
 
 It’s just an ugly solution. Ignoring the fact that I personally would want multiple adapters and dongles to keep with me at my various locations so I don’t constantly have to move them around and potentially lose them, it’s just obnoxious. Add to this the incompatibility with the Apple computers (Macbook, Macbook Pro, iMac, etc) and it’s kind of a WTF moment.
 
@@ -20,4 +27,11 @@ Instead Apple wants to add their own proprietary standard to things making it di
 
 There’s also rumors of Apple inquiring about the 3.5mm headphone jack in the Macbook Pro. This would likely mean the same thing there as well. All I can say to that is NO!
 
-<PostImage src="/images/posts/2016-09-15-thoughts-on-the-iphone-7/michael-scott-no.gif" alt="Michael Scott - NO" centered shadowed={false} />
+<PostImage
+    src="/images/posts/2016-09-15-thoughts-on-the-iphone-7/michael-scott-no.gif"
+    alt="Michael Scott - NO"
+    centered
+    shadowed={false}
+    width={240}
+    height={196}
+/>
