--- a/posts/2017-01-06-2016-in-review.mdx
+++ b/posts/2017-01-06-2016-in-review.mdx
@@ -10,7 +10,7 @@ The year started off alright, enjoying the "new house" feeling, still thinking t
 
 In January, we had our only significant snowfall of the year and season. And I have to say, it was a pretty sight, especially when I didn't have to clear the driveway. But I guess that's why I bought a snow blower.
 
-<PostImage src="/images/posts/2016-in-review/snow.jpg" alt="Snow" centered shadowed />
+<PostImage src="/images/posts/2016-in-review/snow.jpg" alt="Snow" width={2400} height={1600} centered shadowed />
 
 In February, my wife and I discovered that our dining room had wood paneling behind the wallpaper which threw a wrench in our plans of taking down the wallpaper and painting plans. Our whole house was wallpapered, which isn't really our style, but taking down wallpaper, while a major pain in the ass, isn't exactly difficult. Painting would definitely give it a freshening up that isn't terribly expensive. All the other rooms look 100x better now than they did the day we closed on the house.
 
@@ -18,15 +18,15 @@ The dining room was an addition to the house I want to say in the 1970s sometime
 
 In mid-March, the demolition began.
 
-<PostImage src="/images/posts/2016-in-review/diningroomdemo.jpg" alt="Dining Room Demolition" centered shadowed />
+<PostImage src="/images/posts/2016-in-review/diningroomdemo.jpg" alt="Dining Room Demolition" width={2400} height={1800} centered shadowed />
 
 To our surprise, the studs on the ceiling were these gorgeous reclaimed wood beams. (Ignore the nasty wiring, we ended up replacing all of it.)
 
-<PostImage src="/images/posts/2016-in-review/diningroombeams.jpg" alt="Dining Room Beams" centered shadowed />
+<PostImage src="/images/posts/2016-in-review/diningroombeams.jpg" alt="Dining Room Beams" width={2400} height={1800} centered shadowed />
 
 Needless to say, that completely changed our ideas for the final look of the room. The only thing we can figure is the previous owner built the addition with whatever materials he either had on him or could get cheapest. The next 9 months, pretty much right up to Christmas, was spent renovating the dining room. We had to re-stud the walls, run all new wire, insulate, drywall and spackle, paint, install trim, and more. It took MUCH longer than we anticipated, and there's still some finishing touches left to do, but the end result looks amazing.
 
-<PostImage src="/images/posts/2016-in-review/diningroomfinal.jpg" alt="Dining Room Final" centered shadowed />
+<PostImage src="/images/posts/2016-in-review/diningroomfinal.jpg" alt="Dining Room Final" width={2400} height={1800} centered shadowed />
 
 Over the summer, I also had the bright idea to play on 3 different hockey teams. I love playing hockey, but 3 teams was slightly excessive. As much as I love it, playing 3-4 times a week took its toll. This also didn't help with the home renovations either. I'm back down to 2 teams, and it seems like the happy medium. Often times more than once per week, but not really more than twice.
 
@@ -49,7 +49,7 @@ Just under 2 weeks after getting back, Lauren and I went to Vermont for our anni
 
 The only downside to where we were, was that many places seemed to close by 8 or 9 pm. But take that away, it was a great trip and I would totally go back again.
 
-<PostImage src="/images/posts/2016-in-review/vermont.jpg" alt="Wilmington Vermont" centered shadowed />
+<PostImage src="/images/posts/2016-in-review/vermont.jpg" alt="Wilmington Vermont" width={2400} height={1800} centered shadowed />
 
 In terms of my fitness goals, it was a mixed bag. I didn't really get anywhere on my weight or body fat percentage, but I was able to notable increase my strength. At the end of the year I had hit 200 lbs. on bench press, 305 lbs. on deadlifts, & 245 lbs. on squats. In terms of running, I had started to get back into running after running the marathon in 2015, but it was also the first year in a while I didn't run a single race, 5k, half marathon or otherwise. I was supposed to run a 15k and Broad Street, but both days, the weather was crummy and while I wanted to run them, but rain makes me miserable and I guess I just didn't want it enough. I'm hoping to run at least one half-marathon this year.
 
