--- a/posts/2013-10-03-a-new-mini-project-is-brewing-daily-shots.mdx
+++ b/posts/2013-10-03-a-new-mini-project-is-brewing-daily-shots.mdx
@@ -3,7 +3,7 @@ title: 'A New Mini-Project is Brewing: Daily Shots'
 date: '2013-10-03'
 description: 'Creating a new mini-project to improve my photography chops.'
 tags: [{ name: 'Development', url: 'development' }, { name: 'Photography', url: 'photography' }]
-exerpt: "In November of 2011, after really getting into photography, I decided to finally take the plunge and get myself a DSLR camera. I chose the Canon EOS 60D because I liked what it offered, and my girlfriend (now my fiancee) also had it and recommended it to me. I should add that it also is nice since we'll be able to share lenses. Fast forward to now, I've gotten better with photography, but don't always have the time to go out with my Canon and find those awesome shots."
+excerpt: "In November of 2011, after really getting into photography, I decided to finally take the plunge and get myself a DSLR camera. I chose the Canon EOS 60D because I liked what it offered, and my girlfriend (now my fiancee) also had it and recommended it to me. I should add that it also is nice since we'll be able to share lenses. Fast forward to now, I've gotten better with photography, but don't always have the time to go out with my Canon and find those awesome shots."
 ---
 
 In November of 2011, after really getting into photography, I decided to finally take the plunge and get myself a DSLR camera. I chose the Canon EOS 60D because I liked what it offered, and my girlfriend (now my fiancee) also had it and recommended it to me. I should add that it also is nice since we'll be able to share lenses. Fast forward to now, I've gotten better with photography, but don't always have the time to go out with my Canon and find those awesome shots.
