Small fix to correct social images

--- a/posts/2021-10-27-think-again-review.mdx
+++ b/posts/2021-10-27-think-again-review.mdx
@@ -4,7 +4,7 @@ date: '2021-10-27'
 description: "Back in September, I finished readying Think Again by Adam Grant. It's a fantastic book that made me think about how I form my thoughts and opinions, and how I go about possibly re-forming them as evidence changes."
 tags: [{ name: 'Books', url: 'books' }, { name: 'Reviews', url: 'reviews' }, { name: 'Book Reviews', url: 'book-reviews' }]
 excerpt: "Back in September, I finished readying Think Again by Adam Grant. It's a fantastic book that made me think about how I form my thoughts and opinions, and how I go about possibly re-forming them as evidence changes."
-socialImageUrl: 'https://kpwags.com/images/posts/2021-10-27-think-again-review/book-review-think-again.jpeg'
+socialImageUrl: '2021-10-27-think-again-review/book-review-think-again.jpeg'
 socialImageWidth: 1024
 socialImageHeight: 512
 commentIssueNumber: 94
