--- a/posts/2021-10-06-september-check-in.mdx
+++ b/posts/2021-10-06-september-check-in.mdx
@@ -4,7 +4,7 @@ date: '2021-10-06'
 description: 'September seemed to fly by pretty quickly, but it was definitely a good month. I enjoyed a week away on vacation and felt like I got a lot accomplished.'
 tags: [{ name: 'Life', url: 'life' }, { name: 'Monthly Check-In', url: 'monthly-check-in' }]
 excerpt: 'September seemed to fly by pretty quickly, but it was definitely a good month. I enjoyed a week away on vacation and felt like I got a lot accomplished.'
-socialImageUrl: 'https://kpwags.com/images/posts/2021-10-06-september-check-in/cape-may-social.jpg'
+socialImageUrl: '2021-10-06-september-check-in/cape-may-social.jpg'
 socialImageWidth: 800
 socialImageHeight: 600
 commentIssueNumber: 87
