Corrected quote issues

--- a/posts/2021-11-17-october-check-in.mdx
+++ b/posts/2021-11-17-october-check-in.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'October Check-In'
 date: '2021-11-17'
-description: 'October felt like it was a busy month. It seemed that we had plans every weekend and were always on the move. It wasn't necessarily a _bad_ busy, but it probably foreshadows the upcoming holiday season.'
+description: "October felt like it was a busy month. It seemed that we had plans every weekend and were always on the move. It wasn't necessarily a bad busy, but it probably foreshadows the upcoming holiday season."
 tags: [{ name: 'Life', url: 'life' }, { name: 'Monthly Check-In', url: 'monthly-check-in' }]
-excerpt: 'October felt like it was a busy month. It seemed that we had plans every weekend and were always on the move. It wasn't necessarily a _bad_ busy, but it probably foreshadows the upcoming holiday season.'
+excerpt: "October felt like it was a busy month. It seemed that we had plans every weekend and were always on the move. It wasn't necessarily a bad busy, but it probably foreshadows the upcoming holiday season."
 socialImageUrl: '2021-11-17-october-check-in/social-image.jpg'
 socialImageWidth: 1024
 socialImageHeight: 512
