--- a/posts/2022-01-19-books-i-read-in-2021.mdx
+++ b/posts/2022-01-19-books-i-read-in-2021.mdx
@@ -1,10 +1,10 @@
 ---
 title: 'Books I Read in 2021'
-date: '2022-01-18'
+date: '2022-01-19'
 description: "I didn't read as much as I wanted to in 2021, managing a measly nine books."
 tags: [{ name: 'Books', url: 'books' }, { name: "What I've Read", url: 'what-ive-read' }]
 excerpt: "I didn't read as much as I wanted to in 2021, managing a measly nine books."
-socialImageUrl: '2022-01-07-2021-retrospective/social-image.jpg'
+socialImageUrl: '2022-01-19-books-i-read-in-2021/social-image.jpg'
 socialImageWidth: 1024
 socialImageHeight: 512
 commentIssueNumber: 119
@@ -18,13 +18,15 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
     coverImageSrc="/images/books/franchise_golden_arches.jpg"
     width={199}
     height={300}
+    link="https://bookshop.org/books/franchise-the-golden-arches-in-black-america-9781684577019/9781631498701"
     thoughts={
         <>
             I had heard about this book on{' '}
             <a href="https://www.marketplace.org/2020/07/06/the-complicated-history-of-mcdonalds-and-black-america/" target="_blank" rel="noreferrer">
                 Marketplace
             </a>{' '}
-            and given the tumultuous 2020, felt like this would be an interesting read to maybe give myself some insight.
+            and given the tumultuous 2020, felt like this would be an interesting read to maybe give myself some insight. It was an interesting read
+            going into areas where McDonald's did well and where it fell short.
         </>
     }
 />
@@ -37,6 +39,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
     coverImageSrc="/images/books/mvpmachine.jpg"
     width={193}
     height={300}
+    link="https://bookshop.org/books/the-mvp-machine-how-baseball-s-new-nonconformists-are-using-data-to-build-better-players/9781541698925"
     thoughts={
         <>
             I've been a big fan of Ben's{' '}
@@ -51,7 +54,8 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
             >
                 The Only Rule Is It Has to Work
             </a>{' '}
-            so I decided to pick this up and wasn't disappointed.
+            so I decided to pick this up and wasn't disappointed. It was a great look into how teams and players are trying new things to get a leg up
+            in the game.
         </>
     }
 />
@@ -64,6 +68,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
     coverImageSrc="/images/books/money-goldstein.jpg"
     width={200}
     height={300}
+    link="https://bookshop.org/books/money-the-true-story-of-a-made-up-thing/9780316417198"
     thoughts={<>Having listened to Jacob on NPR's Planet Money podcast, I had heard about this book and thought it had an interesting premise.</>}
 />
 
@@ -75,10 +80,12 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
     coverImageSrc="/images/books/fieldofschemes.jpg"
     width={202}
     height={300}
+    link="https://bookshop.org/books/field-of-schemes-how-the-great-stadium-swindle-turns-public-money-into-private-profit-revised/9780803260160"
     thoughts={
         <>
-            I had figured out a while ago that publicly funded sports stadiums were a raw deal. This book didn’t tell me anything I didn’t know other
-            than how bad they were and how owners were able to swindle us all.
+            I had figured out a while ago that publicly funded sports stadiums were a raw deal. This book only enforced my opinion on why these are
+            raw deals. I learned more details on how they've been able to pull it off. The book goes into detail on how bad these deals are how owners
+            were able to swindle us all.
         </>
     }
 />
@@ -86,11 +93,12 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
 <hr />
 
 <BookRead
-    title="The Premonition"
+    title="The Premonition: A Pandemic Story"
     author="Michael Lewis"
     coverImageSrc="/images/books/premonition.jpg"
     width={197}
     height={300}
+    link="https://bookshop.org/books/the-premonition-a-pandemic-story-9781713631897/9780393881554"
     thoughts={
         <>
             Having lived through 2020, I understood that the US Government royally screwed up its handling of the COVID-19 pandemic. Reading this book
@@ -107,6 +115,7 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
     coverImageSrc="/images/books/thinkagain.jpg"
     width={199}
     height={300}
+    link="https://bookshop.org/books/think-again-the-power-of-knowing-what-you-don-t-know-9781984878106/9781984878106"
     thoughts={
         <>
             I wrote a{' '}
@@ -127,7 +136,21 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
     coverImageSrc="/images/books/cult-of-we.jpg"
     width={199}
     height={300}
-    thoughts={<>It still amazes me reading about the WeWork saga that it got as far as it did.</>}
+    link="https://bookshop.org/books/the-cult-of-we-wework-adam-neumann-and-the-great-startup-delusion/9780593237113"
+    thoughts={
+        <>
+            It still amazes me reading about the WeWork saga that it got as far as it did. I had heard some of the craziness that was going on thanks
+            to{' '}
+            <a
+                href="https://www.marketplace.org/shows/make-me-smart-with-kai-and-molly/weworks-whole-bananapants-story/"
+                target="_blank"
+                rel="noreferrer"
+            >
+                Make Me Smart
+            </a>
+            , but until I read this book...let's just say...wow!
+        </>
+    }
 />
 
 <hr />
@@ -138,7 +161,14 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
     coverImageSrc="/images/books/buyoutofamerica.jpg"
     width={196}
     height={300}
-    thoughts={<>This book just made me angry seeing Wall Street & Hedge Funds come in and destroy companies and jobs for a quick buck.</>}
+    link="https://bookshop.org/books/the-buyout-of-america-how-private-equity-is-destroying-jobs-and-killing-the-american-economy/9781591843696"
+    thoughts={
+        <>
+            This book just made me angry seeing Wall Street & Hedge Funds come in and destroy companies and jobs for a quick buck. But as angry as I
+            might be over what happened, I feel that it's important to know what and how it happened. This book does a good job of giving examples and
+            talking about the history of it all.
+        </>
+    }
 />
 
 <hr />
@@ -149,5 +179,11 @@ I didn't read as much as I wanted to in 2021, managing a measly nine books.
     coverImageSrc="/images/books/righteousmind.jpg"
     width={196}
     height={300}
-    thoughts={<>Was a long read.</>}
+    link="https://bookshop.org/books/the-righteous-mind-why-good-people-are-divided-by-politics-and-religion-9798200560639/9780307455772"
+    thoughts={
+        <>
+            This was my second attempt at reading this book. I finished this time. It wasn't a bad read, but it was felt like a dense read. The
+            explanation Jonathan gives does seem to fit some of the things we see going on in politics today.
+        </>
+    }
 />
