Attempt 1 at Fixing RSS

--- a/posts/2018-01-29-outdoor-hockey.mdx
+++ b/posts/2018-01-29-outdoor-hockey.mdx
@@ -13,7 +13,7 @@ The weekend prior, the AHL (American Hockey League, or the NHL minor league) hel
 <PostImage
     src="/images/posts/2018-01-29-outdoor-hockey/2018-ahl-outdoor-classic.jpg"
     alt="Skating Outdoors"
-    height={2048}
+    width={2048}
     height={2048}
     entered
     shadowed
