--- a/posts/2022-04-06-march-check-in.mdx
+++ b/posts/2022-04-06-march-check-in.mdx
@@ -45,11 +45,7 @@ I put my fitness tracking app on the back burner for the time being and have mov
         The Storyteller: Tales of Life and Music
     </a> - Dave Grohl has always seemed to be an interesting and unique person. This was an interesting memoir talking about his growth from High School
     punk musician, through Nirvana and eventually Foo Fighters. If you're a fan of any of his work, I'd highly recommend this.
--   <a
-        href="https://bookshop.org/books/it-s-better-to-be-feared-the-new-england-patriots-dynasty-and-the-pursuit-of-greatness/9781631498237"
-        target="_blank"
-        rel="noreferrer nofollow"
-    >
+-   <a href="https://bookshop.org/books/it-s-better-to-be-feared-the-new-england-patriots-dynasty-and-the-pursuit-of-greatness/9781631498237" target="_blank" rel="noreferrer nofollow">
         It's Better to Be Feared: The New England Patriots Dynasty and the Pursuit of Greatness
     </a> - I'm by no means a Patriots fan, but I found this to be an interesting look into the 2 decades long dynasty of Brady-Belichick and the Patriots.
 
