Added New Post & Fixed Excerpts

--- a/posts/2022-04-06-march-check-in.mdx
+++ b/posts/2022-04-06-march-check-in.mdx
@@ -10,7 +10,7 @@ socialImageHeight: 512
 commentIssueNumber: 147
 ---
 
-March did't particularly feel like that busy of a month. About the only eventful thing that happened was a week-long vacation to Cape May, New Jersey at the end of the month.
+March didn't particularly feel like that busy of a month. About the only eventful thing that happened was a week-long vacation to Cape May, New Jersey at the end of the month.
 
 ## Homebrew Results
 
