--- a/posts/2022-05-13-reading-list.mdx
+++ b/posts/2022-05-13-reading-list.mdx
@@ -2,6 +2,7 @@
 title: 'Reading List: May 7 - May 13'
 date: '2022-05-13'
 tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'Software Development', url: 'software-development' }, { name: 'Economics', url: 'economics' }, { name: 'AI', url: 'ai' }, { name: 'Work', url: 'work' }, { name: 'Video Games', url: 'video-games' }]
+contentImage: '2022-05-13-reading-list/content.jpg'
 socialImageUrl: '2022-05-13-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
