--- a/posts/2022-05-21-reached-my-goal-for-squats.mdx
+++ b/posts/2022-05-21-reached-my-goal-for-squats.mdx
@@ -2,6 +2,7 @@
 title: 'Reached my Goal for Squats'
 date: '2022-05-21'
 tags: [{ name: 'Goals', url: 'goals' }, { name: 'Lifting', url: 'lifting' }, { name: 'Strength Training', url: 'strength-training' }]
+contentImage: '2022-05-21-reached-my-goal-for-squats/content.jpg'
 socialImageUrl: '2022-05-21-reached-my-goal-for-squats/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
