--- a/posts/2022-05-29-better-sql-update-stored-procedures.mdx
+++ b/posts/2022-05-29-better-sql-update-stored-procedures.mdx
@@ -2,6 +2,7 @@
 title: 'Better SQL Update Stored Procedures'
 date: '2022-05-29'
 tags: [{ name: 'Software Development', url: 'software-development' }, { name: 'SQL', url: 'sql' }, { name: 'Database', url: 'database' }]
+contentImage: '2022-05-29-better-sql-update-stored-procedures/content.jpg'
 socialImageUrl: '2022-05-29-better-sql-update-stored-procedures/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
