--- a/posts/2022-05-12-taking-control-of-your-content.mdx
+++ b/posts/2022-05-12-taking-control-of-your-content.mdx
@@ -2,6 +2,7 @@
 title: 'Taking Control of Your Content'
 date: '2022-05-12'
 tags: [{ name: 'Social Media', url: 'social-media' }, { name: 'Internet', url: 'internet' }]
+contentImage: '2022-05-12-taking-control-of-your-content/content.jpg'
 socialImageUrl: '2022-05-12-taking-control-of-your-content/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
