--- a/posts/2022-06-01-may-check-in.mdx
+++ b/posts/2022-06-01-may-check-in.mdx
@@ -2,6 +2,7 @@
 title: 'May Check-In'
 date: '2022-06-01'
 tags: [{ name: 'Life', url: 'life' }, { name: 'Monthly Check-In', url: 'monthly-check-in' }, { name: 'Video Games', url: 'video-games' }, { name: 'COVID', url: 'covid' }, { name: 'Running', url: 'running' },{ name: 'Lifting', url: 'lifting' }, { name: 'Strength Training', url: 'strength-training' }]
+contentImage: '2022-06-01-may-check-in/content.jpg'
 socialImageUrl: '2022-06-01-may-check-in/social-image.jpg'
 socialImageWidth: 1024
 socialImageHeight: 512
