--- a/posts/2022-06-03-reading-list.mdx
+++ b/posts/2022-06-03-reading-list.mdx
@@ -2,6 +2,7 @@
 title: 'Reading List: May 28 - June 3'
 date: '2022-06-03'
 tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'CSS', url: 'css'}, { name: 'Git', url: 'git'}, { name: 'Source Control', url: 'source-control'}]
+contentImage: '2022-06-03-reading-list/content.jpg'
 socialImageUrl: '2022-06-03-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
@@ -10,12 +11,12 @@ commentIssueNumber: 186
 
 Spent a bit of time this weekend looking at CSS and web development. Pixels, rems, typography &amp; more!
 
-🧑🏼‍💻 [**The Surprising Truth About Pixels and Accessibility**](https://www.joshwcomeau.com/css/surprising-truth-about-pixels-and-accessibility/) - Josh does a great job in this article talking about when you should use rems and when you should use pixels, and why. <span className="domain">(joshwcomeau.com)</span>
+🧑🏼‍💻 [**The Surprising Truth About Pixels and Accessibility**](https://www.joshwcomeau.com/css/surprising-truth-about-pixels-and-accessibility/) - Josh does a great job in this article talking about when you should use rems and when you should use pixels, and why. <span className="domain-name">(joshwcomeau.com)</span>
 
-🅰 [**Modern Fluid Typography Using CSS Clamp**](https://www.smashingmagazine.com/2022/01/modern-fluid-typography-css-clamp/) - I've been wanting to improve the typography on what I design and develop. This can help. <span className="domain">(smashingmagazine.com)</span>
+🅰 [**Modern Fluid Typography Using CSS Clamp**](https://www.smashingmagazine.com/2022/01/modern-fluid-typography-css-clamp/) - I've been wanting to improve the typography on what I design and develop. This can help. <span className="domain-name">(smashingmagazine.com)</span>
 
-🤔 [**Where the f*ck is native CSS nesting?**](https://benfrain.com/where-the-f-is-native-css-nesting/) - I'd like to know as well. Hopefully soon as it'd be nice to clean up some CSS. <span className="domain">(benfrain.com)</span>
+🤔 [**Where the f*ck is native CSS nesting?**](https://benfrain.com/where-the-f-is-native-css-nesting/) - I'd like to know as well. Hopefully soon as it'd be nice to clean up some CSS. <span className="domain-name">(benfrain.com)</span>
 
-💾 [**What's in a monorepo**](https://chriscoyier.net/2022/05/31/whats-in-a-monorepo/) - A nice bit talking about the benefits of using a monorepo. <span className="domain">(chriscoyier.net)</span>
+💾 [**What's in a monorepo**](https://chriscoyier.net/2022/05/31/whats-in-a-monorepo/) - A nice bit talking about the benefits of using a monorepo. <span className="domain-name">(chriscoyier.net)</span>
 
-🎚 [**Dark Mode Toggles Should be a Browser Feature**](https://www.bram.us/2022/05/25/dark-mode-toggles-should-be-a-browser-feature/) - I agree with this. It would be nice as a developer to not have to duplicate code to support both the browser being set to dark mode and the user selecting something different than what the browser is set to. <span className="domain">(bram.us)</span>
+🎚 [**Dark Mode Toggles Should be a Browser Feature**](https://www.bram.us/2022/05/25/dark-mode-toggles-should-be-a-browser-feature/) - I agree with this. It would be nice as a developer to not have to duplicate code to support both the browser being set to dark mode and the user selecting something different than what the browser is set to. <span className="domain-name">(bram.us)</span>
