--- a/posts/2022-06-10-reading-list.mdx
+++ b/posts/2022-06-10-reading-list.mdx
@@ -11,11 +11,11 @@ commentIssueNumber: 198
 
 A little bit of everything this week from new features coming to .NET and Next.js, to working from home, and prediting the future.
 
-[**Build 2022 Updates for ASP.NET Core Developers**](https://www.telerik.com/blogs/build-2022-updates-aspnet-core-developers) - As a .NET developer, always keeping up with all the awesome features they're adding. <span className="domain-name">(telerik.com)</span>
+🧑🏼‍💻 [**Build 2022 Updates for ASP.NET Core Developers**](https://www.telerik.com/blogs/build-2022-updates-aspnet-core-developers) - As a .NET developer, always keeping up with all the awesome features they're adding. <span className="domain-name">(telerik.com)</span>
 
-[**NEXT.js Layouts RFC**](https://nextjs.org/blog/layouts-rfc) - I'm excited to try this out when they release it. This blog is built on Next.js! <span className="domain-name">(nextjs.org)</span>
+🧑🏼‍💻 [**NEXT.js Layouts RFC**](https://nextjs.org/blog/layouts-rfc) - I'm excited to try this out when they release it. This blog is built on Next.js! <span className="domain-name">(nextjs.org)</span>
 
-[**Employee surveillance software is managerial bankruptcy**](https://world.hey.com/dhh/employee-surveillance-software-is-managerial-bankruptcy-94e48a08) - I'm a firm believer in trusting your employees to do their work. It's pretty obvious when they aren't, you don't need spyware to do it. <span className="domain-name">(hey.com)</span>
+🕵🏻‍♂️ [**Employee surveillance software is managerial bankruptcy**](https://world.hey.com/dhh/employee-surveillance-software-is-managerial-bankruptcy-94e48a08) - I'm a firm believer in trusting your employees to do their work. It's pretty obvious when they aren't, you don't need spyware to do it. <span className="domain-name">(hey.com)</span>
 
-[**Techdirt Podcast #316: Predicting the Future**](https://www.techdirt.com/2022/04/05/techdirt-podcast-episode-316-predicting-the-future/) - Interesting discussion on making predictions about the future and getting better at it. <span className="domain-name">(techdirt.com)</span>
+🔮 [**Techdirt Podcast #316: Predicting the Future**](https://www.techdirt.com/2022/04/05/techdirt-podcast-episode-316-predicting-the-future/) - Interesting discussion on making predictions about the future and getting better at it. <span className="domain-name">(techdirt.com)</span>
 
