Fixed Some Contrast Bugs & Added Post

--- a/posts/2022-07-08-reading-list.mdx
+++ b/posts/2022-07-08-reading-list.mdx
@@ -9,6 +9,8 @@ socialImageHeight: 675
 commentIssueNumber: 214
 ---
 
+This week we look at a lot of CSS web development and some background on GoldenEye for the Nintendo 64.
+
 ## 👨🏼‍💻Software Development
 
 [The Unlocked Possibilities of the :has() Selector](https://blog.jim-nielsen.com/2022/unlocked-possibilities-of-has-selector/) - blog.jim-nielsen.com
