--- a/posts/2022-07-15-reading-list.mdx
+++ b/posts/2022-07-15-reading-list.mdx
@@ -9,6 +9,8 @@ socialImageHeight: 675
 commentIssueNumber: 216
 ---
 
+This week we look at a lot of web dev articles as well as some amazing photos from the JWST.
+
 ## 👨🏼‍💻Software Development
 
 [The Resiliency in the Web's Layers](https://blog.jim-nielsen.com/2022/resiliency-in-the-webs-layers/) - *blog.jim-nielsen.com*
