Updated Tags & Excerpt

--- a/posts/2022-07-22-reading-list.mdx
+++ b/posts/2022-07-22-reading-list.mdx
@@ -1,12 +1,14 @@
 ---
 title: 'Reading List: July 16 - July 22'
 date: '2022-07-22'
-tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'Space', url: 'space'}, { name: 'Remote Work', url: 'remote-work'}, { name: 'Development', url: 'development'}]
+tags: [{ name: 'Reading List', url: 'reading-list' }, { name: 'C#', url: 'csharp'}, { name: 'SQL', url: 'sql'}, { name: 'CSS', url: 'css'}, { name: 'Local News', url: 'local-news'}]
 socialImageUrl: '2022-07-22-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 226
 ---
+
+Some articles about C#, SQL and looking at local newspapers.
 
 ## 👨🏼‍💻Software Development
 
