Added Word Count & Reading Time
Added reading time to posts, as well as an ignored flag

Closes #237

--- a/posts/2022-05-06-reading-list.mdx
+++ b/posts/2022-05-06-reading-list.mdx
@@ -6,6 +6,7 @@ socialImageUrl: '2022-05-06-weekly-reading/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 165
+ignoreWordCount: true
 ---
 
 I think I'm going to start this series of entries again. Trying to continue to share the interesting articles and stories I've read over the course of the week.
