--- a/posts/2022-05-13-reading-list.mdx
+++ b/posts/2022-05-13-reading-list.mdx
@@ -7,6 +7,7 @@ socialImageUrl: '2022-05-13-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 173
+ignoreWordCount: true
 ---
 
 I've been going through my podcast backlog so this week has a lot of podcasts.
