--- a/posts/2022-06-03-reading-list.mdx
+++ b/posts/2022-06-03-reading-list.mdx
@@ -7,6 +7,7 @@ socialImageUrl: '2022-06-03-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 186
+ignoreWordCount: true
 ---
 
 Spent a bit of time this weekend looking at CSS and web development. Pixels, rems, typography &amp; more!
