--- a/posts/2022-07-01-reading-list.mdx
+++ b/posts/2022-07-01-reading-list.mdx
@@ -7,6 +7,7 @@ socialImageUrl: '2022-07-01-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 208
+ignoreWordCount: true
 ---
 
 Didn't get to much reading this week, but a little bit on CSS, Apple's issues with WebKit and iOS, and women and grunge.
