--- a/posts/2022-07-15-reading-list.mdx
+++ b/posts/2022-07-15-reading-list.mdx
@@ -7,6 +7,7 @@ socialImageUrl: '2022-07-15-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 216
+ignoreWordCount: true
 ---
 
 This week we look at a lot of web dev articles as well as some amazing photos from the JWST.
