--- a/posts/2022-07-22-reading-list.mdx
+++ b/posts/2022-07-22-reading-list.mdx
@@ -6,6 +6,7 @@ socialImageUrl: '2022-07-22-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 226
+ignoreWordCount: true
 ---
 
 Some articles about C#, SQL and looking at local newspapers.
