--- a/posts/2022-07-29-reading-list.mdx
+++ b/posts/2022-07-29-reading-list.mdx
@@ -6,6 +6,7 @@ socialImageUrl: '2022-07-29-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 233
+ignoreWordCount: true
 ---
 
 Delved a lot into C# and .NET this week. Also a great discussion on Plain English about the current state of Crypto.
