--- a/posts/2022-05-20-reading-list.mdx
+++ b/posts/2022-05-20-reading-list.mdx
@@ -7,6 +7,7 @@ socialImageUrl: '2022-05-20-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 175
+ignoreWordCount: true
 ---
 
 This week we're a little heavy reading about freedom of speech and content moderation.
