--- a/posts/2022-05-27-reading-list.mdx
+++ b/posts/2022-05-27-reading-list.mdx
@@ -7,6 +7,7 @@ socialImageUrl: '2022-05-27-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 180
+ignoreWordCount: true
 ---
 
 I unfortunately was dealing with COVID this week, so I didn't have a lot of energy to read.
