--- a/posts/2022-06-10-reading-list.mdx
+++ b/posts/2022-06-10-reading-list.mdx
@@ -7,6 +7,7 @@ socialImageUrl: '2022-06-10-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 198
+ignoreWordCount: true
 ---
 
 A little bit of everything this week from new features coming to .NET and Next.js, to working from home, and prediting the future.
