--- a/posts/2022-06-24-reading-list.mdx
+++ b/posts/2022-06-24-reading-list.mdx
@@ -7,6 +7,7 @@ socialImageUrl: '2022-06-24-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 202
+ignoreWordCount: true
 ---
 
 Due to my trip last week to New York City, this list is a little bit longer.
