--- a/posts/2022-07-08-reading-list.mdx
+++ b/posts/2022-07-08-reading-list.mdx
@@ -7,6 +7,7 @@ socialImageUrl: '2022-07-08-reading-list/social-image.jpg'
 socialImageWidth: 1200
 socialImageHeight: 675
 commentIssueNumber: 214
+ignoreWordCount: true
 ---
 
 This week we look at a lot of CSS web development and some background on GoldenEye for the Nintendo 64.
